 syntax="proto3";

 option csharp_namespace="FileStreaming";

 package file;

 import "google/protobuf/empty.proto";//Geriye dönüş değeri olmayan metotlar için kullanıyoruz.

 service FileService{
	 rpc FileDownload (FileInfo) returns (stream BytesContent);
	 rpc FileUpload  (stream BytesContent) returns(google.protobuf.Empty);//Geriye Empty dönüyor, yani dönüş değeri yok gibi düşünülebilir.
}
message FileInfo{
    string fileName = 1;
    string fileExtension = 2;
}
message BytesContent{
    int64 fileSize = 1;
    bytes buffer = 2;//Size of package for every stream
    int32 readedByte = 3;// read file count in stream
    FileInfo info = 4;
}

 